--- a/movies.css
+++ b/movies.css
@@ -1,83 +1,154 @@
 body {
-    background-color: rgb(167, 147, 147);
+  background-color: rgb(0, 0, 0);
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2px;
-    justify-content: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: flex-start;
 }
 
 
 .card {
-    position: relative;
-    width: 220px;
-    height: 320px;
-    background: mediumturquoise;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 25px;
-    font-weight: bold;
-    border-radius: 15px;
-    cursor: pointer;
-  }
-  
-  .card img{
-    width: 100%;
-    height: 100%;
+  position: relative;
+  width: 260px;
+  height: 400px;
+  background: mediumturquoise;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: bold;
+  border-radius: 15px;
+  cursor: pointer;
+  border-radius: 20px;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
+.card .info {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: black;
+  justify-content: flex-end;
+  align-items: center;
+  opacity: 0.8;
+  color: white;
+  flex-direction: column;
+  font-size: small;
+  border-radius: 20px;
+  font-family: monospace;
+}
+
+.titlediv {
+  width: 80%;
+  text-align: center;
+  font-size: medium;
+  opacity: 90%;
+}
+
+.button {
+  background-color: #790097;
+  border: none;
+  color: white;
+  padding: 7px 14px;
+  text-align: center;
+  font-size: 12px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 5%;
+}
+
+.button:hover {
+  opacity: 1
+}
+
+.navigationbar {
+  font-size: xxx-large;
+  font-family: fantasy;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 20px;
+
+
+  .text {
+    background-color: #790097;
+    border-radius: 5px;
+    font-size: 35px;
+
   }
 
-  /* .card::before,
-  .card::after {
-    position: absolute;
-    content: "";
-    width: 20%;
-    height: 20%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 25px;
-    font-weight: bold;
-    background-color: lightblue;
-    transition: all 0.5s;
+  .titleLabel {
+    margin: 20px;
   }
-  
-  .card::before {
-    top: 0;
-    right: 0;
-    border-radius: 0 15px 0 100%;
-  }
-  
-  .card::after {
-    bottom: 0;
-    left: 0;
-    border-radius: 0 100%  0 15px;
-  }
-  
-  .card:hover::before,
-  .card:hover:after {
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
-    transition: all 0.5s;
-  } */
-  
-  /* .card:hover:after {
-    content: "HELLO";
-  } */
+}
 
-  .card .info{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: black;
-    justify-content: center;
-    align-items: center;
-    opacity: 0.8;
-    color: white;
-    flex-direction: column;
-  }
+.signupbtn {
+  background-color: rgb(199, 171, 15);
+  border: none;
+  color: black;
+  padding: 7px 14px;
+  text-align: center;
+  font-size: 12px;
+  margin: 4px 2px;
+  opacity: 0.8;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 5%;
+  font-weight: bold;
+  align-items: end;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.signupbtn:hover {
+  opacity: 1
+}
+
+.signupbtn2 {
+  display: table;
+  float: right;
+  padding-top: 4px;
+  margin-right: 15px;
+}
+
+.searchbar {
+  font-size: 14px;
+  margin-left: 20px;
+  vertical-align: 6px;
+  box-sizing: border-box;
+  border: 2px solid #790097;
+  border-radius: 4px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  padding: 6px 10px 6px 20px;
+
+}
+
+.caption {
+  color: white;
+  font-size: 37px;
+  font-family: fantasy;
+  padding-left: 21px;
+}
+
+.caption2 {
+  color: white;
+  font-size: 14px;
+  padding-left: 2px;
+  opacity: 50%;
+}
